--- a/ai_assistant/projects/templates/projects/project_list.html
+++ b/ai_assistant/projects/templates/projects/project_list.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Projects</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'projects/style.css' %}">
 </head>
 <body>
     <h1>Project List</h1>
