--- a/ai_assistant/projects/templates/projects/project_confirm_delete.html
+++ b/ai_assistant/projects/templates/projects/project_confirm_delete.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Delete Project</title>
+     {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'projects/style.css' %}">
 </head>
 <body>
     <h1>Are you sure you want to delete this project?</h1>
