--- a/ai_assistant/projects/templates/projects/project_detail.html
+++ b/ai_assistant/projects/templates/projects/project_detail.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>{{ project.name }}</title>
+     {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'projects/style.css' %}">
 </head>
 <body>
     <h1>{{ project.name }}</h1>
