--- a/ai_assistant/projects/templates/projects/project_list.html
+++ b/ai_assistant/projects/templates/projects/project_list.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Projects</title>
+     <meta name="theme-color" content="#003366">
+    <title>Tasks</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'projects/style.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Project List</h1>
-    <a href="{% url 'project_add' %}">Add New Project</a>
-    <ul>
-        {% for project in projects %}
-            <li>
-                <a href="{% url 'project_detail' project.id %}">{{ project.name }}</a>
-                (<a href="{% url 'project_edit' project.id %}">Edit</a> |
-                <a href="{% url 'project_delete' project.id %}">Delete</a>)
-            </li>
-        {% endfor %}
-    </ul>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url 'project_list' %}">Projects App</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'project_list' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'project_add' %}">Add Project</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="container mt-4">
+        <a class="btn btn-primary mb-3" href="{% url 'project_add' %}">Add New Project</a>
+        <ul class="list-group">
+            {% for project in projects %}
+                <li class="list-group-item">
+                    <a href="{% url 'project_detail' project.id %}">{{ project.name }}</a>
+                    (<a href="{% url 'project_edit' project.id %}">Edit</a> |
+                    <a href="{% url 'project_delete' project.id %}">Delete</a>)
+                     <!-- Display tasks related to this project -->
+                    <ul>
+                        {% for task in project.tasks.all %}
+                            <li>{{ task.name }} - {% if task.completed %}Completed{% else %}Pending{% endif %}</li>
+                        {% empty %}
+                            <li>No tasks available</li>
+                        {% endfor %}
+                    </ul>
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
