Added same advanced creator functions to project form creation and implemented navbar etc. minor css changes

--- a/ai_assistant/projects/static/projects/style.css
+++ b/ai_assistant/projects/static/projects/style.css
@@ -139,3 +139,8 @@ input, textarea {
 h3 {
     color: #0f0f0f;
 }
+
+form .btn-secondary {
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
